--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,3 +18,11 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    google_id: ThisTokenIsNotSoSecretChangeIt
+    google_secret: ThisTokenIsNotSoSecretChangeIt
+    google_scope: ThisTokenIsNotSoSecretChangeIt
+    facebook_id: ThisTokenIsNotSoSecretChangeIt
+    facebook_secret: ThisTokenIsNotSoSecretChangeIt
+    twitter_id: ThisTokenIsNotSoSecretChangeIt
+    twitter_secret: ThisTokenIsNotSoSecretChangeIt
