need contact page about mention and terms added

--- a/app/config/config/zimzim_tools.yml
+++ b/app/config/config/zimzim_tools.yml
@@ -1,2 +1,2 @@
 zimzim_tools:
-    uploadtinymce_class: ZIMZIM\AppBundle\Entity\UploadTinymce
+    uploadtinymce_class: AppBundle\Entity\UploadTinymce
