--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -26,3 +26,8 @@ parameters:
     facebook_secret: ThisTokenIsNotSoSecretChangeIt
     twitter_id: ThisTokenIsNotSoSecretChangeIt
     twitter_secret: ThisTokenIsNotSoSecretChangeIt
+
+    enabledlangage: {}
+    debug_toolbar: true
+    debug_redirects: false
+    use_assetic_controller: true
