--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,16 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
 
+        "jms/i18n-routing-bundle": "1.1.1",
+        "white-october/pagerfanta-bundle": "1.0.*@dev",
+
         "friendsofsymfony/user-bundle": "2.0.*@dev",
         "hwi/oauth-bundle": "0.4.*@dev",
 
         "gedmo/doctrine-extensions": "2.3.*@dev",
         "apy/datagrid-bundle": "dev-master",
+
+        "stof/doctrine-extensions-bundle": "1.2.*@dev",
 
         "zimzim62000/user-bundle": "dev-master",
         "zimzim62000/categoryproduct-bundle": "dev-master",
