--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,8 +1,8 @@
 services:
     zimzim_appbundle.form.type.zimzimcollectionformtype:
-        class: ZIMZIM\AppBundle\Form\Type\ProductType
+        class: AppBundle\Form\Type\ProductType
         tags:
-            - { name: form.type, alias: zimzim_appbundle_producttype }
+            - { name: form.type, alias: appbundle_producttype }
 
     appbundle.form.type.contacttype:
         class: AppBundle\Form\Type\ContactType
