--- a/app/config/config/zimzim_user.yml
+++ b/app/config/config/zimzim_user.yml
@@ -20,7 +20,7 @@ hwi_oauth:
         properties:
             google: google_id
             facebook: facebook_id
-            twitter: twitter_id
+#            twitter: twitter_id
     resource_owners:
         google:
             type: google
@@ -39,7 +39,7 @@ hwi_oauth:
             scope: "email"
             options:
                 display: popup
-        twitter:
-            type: twitter
-            client_id: "%twitter_id%"
-            client_secret: "%twitter_secret%"
+#        twitter:
+#            type: twitter
+#            client_id: "%twitter_id%"
+#            client_secret: "%twitter_secret%"
